--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbwfCg_5Z-PqpuCl8S5lEIdVNNysCKXpM4rh5xr5ZUiItHUF6ZOZZp41DYRVGiIMxiHo/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
